# ts2025-presentations-2-ivaylo_tsvetomir

./: README.md  assignment.ipynb  assignment2_Ivaylo_Tsvetomir.ipynb  pyproject.toml
